# MatchWZRD

./: .gitignore  README.md  app.py  check_db.py  database.py  init_db.py  matching.py  pyproject.toml  requirements.txt  start.bat  start.sh  update_school.py
backend/: app.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/layout/: Footer.js  Navbar.js
frontend/src/pages/: AnalyticsPage.js  ConfigPage.js  HomePage.js  PreferencesPage.js  ResultsPage.js
